Adding more unit tests